Ran PMD and cleaned up.